--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,7 +1,77 @@
 % Appendix A
 
-\chapter{Appendix Title Here} % Main appendix title
+\chapter{Appendix: Source Code} % Main appendix title
 
 \label{AppendixA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-Write your Appendix content here.
+\section{Server Side Code}
+
+\subsection{Java Server Pages}
+
+\subsubsection{DecryptTemp}
+
+\begin{figure}[H]
+\begin{lstlisting}[style=Java]
+
+\end{lstlisting}
+\caption{Accessing the SQL database in JSP}
+\label{snip:jspcode}
+\end{figure}
+
+
+\subsubsection{SecretKey}
+
+\begin{figure}[H]
+\begin{lstlisting}[style=Java]
+
+\end{lstlisting}
+\caption{Accessing the SQL database in JSP}
+\label{snip:jspcode}
+\end{figure}
+
+
+\subsection{PHP}
+
+\subsubsection{connect.php}
+
+\begin{figure}[H]
+%\begin{lstlisting}[language=PHP]
+\begin{lstlisting}[style=PHP]
+
+\end{lstlisting}
+\caption{Arduino to SQL interfacing code}
+\label{snip:php}
+\end{figure}
+
+\subsubsection{add.php}
+
+\begin{figure}[H]
+%\begin{lstlisting}[language=PHP]
+\begin{lstlisting}[style=PHP]
+
+\end{lstlisting}
+\caption{Arduino to SQL interfacing code}
+\label{snip:php}
+\end{figure}
+\section{Microcontroller}
+
+\subsection{Arduino Due}
+
+\begin{figure}[H]
+\begin{lstlisting}[style=Arduino]
+
+\end{lstlisting}
+\caption{Handling POST requests in Arduino}
+\label{snip:post}
+\end{figure}
+
+
+\subsection{Arduino Uno}
+
+\begin{figure}[H]
+\begin{lstlisting}[style=Arduino]
+
+\end{lstlisting}
+\caption{Handling POST requests in Arduino}
+\label{snip:post}
+\end{figure}
