--- a/example.bib
+++ b/example.bib
@@ -130,12 +130,26 @@ and Sjaak Smetsers},
 	year = {2005}
 }
 
+@book{NetworkSec,
+	author ={James M. Kurose and Keith W. Ross},
+	title = {Computer Networking: A Top Down Approach, 5th edition},
+	publisher = {Pearson Education Limited},
+	month = {April},
+	year = {2009}
+}
+
 @misc{dsdatasheet,
 	author = {Maxim Integrated},
 	title = {High-Precision 1-Wire Digital Thermometer},
 	year = {2015},
 	url ={datasheets.maximintegrated.com/en/ds/DS18S20.pdf}
 	}
+
+@misc{fritz,
+	author ={Friends Of Fritzing},
+	title = {Fritzing},
+	url = {http://fritzing.org/download/}
+}
 
 @misc{ian,
 	website = {github.com},
@@ -178,3 +192,24 @@ PKCS\#7, MOSS, PEM, PGP, and XML },
         year = {2015},
         url = {https://censys.io}
  }
+
+ @misc{portapow,
+ 	website={http://www.portablepowersupplies.co.uk},
+ 	author = {PortaPow},
+ 	title = {PortaPow Premium USB + DC Power Monitor},
+ 	url = {http://www.portablepowersupplies.co.uk/portapow-premium-usb-dc-power-monitor/},
+ }
+   
+@misc{dsimage,
+ 	url = {http://fluuux.de/2012/09/arduino-adressen-aller-ds1820-ermitteln/}
+ 	}
+ 	
+@misc{dueimage,
+ 	url = {https://www.arduino.cc/en/Guide/ArduinoDue}
+ 	}
+ 	
+ 	@misc{ethimage,
+ 	url = {https://www.arduino.cc/en/Main/ArduinoEthernetShield}
+ 	}
+ 	
+ 
