--- a/main.tex
+++ b/main.tex
@@ -171,9 +171,9 @@ oneside,
 
 \geometry{
 	paper=a4paper, % Change to letterpaper for US letter
-	inner=2.5cm, % Inner margin
-	outer=4.0cm, % Outer margin
-	bindingoffset=2cm, % Binding offset
+	inner=4.0cm, % Inner margin
+	outer=2.5cm, % Outer margin
+	%bindingoffset=2cm, % Binding offset
 	top=1.5cm, % Top margin
 	bottom=1.5cm, % Bottom margin
 	%showframe,% show how the type block is set on the page
@@ -321,7 +321,7 @@ oneside,
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-This report aims to explain how to build a sensor platform that can transmit data across the internet securely and show that security on low powered microcontrollers is possible and easy. It introduces a light weight cryptographic library and demonstrates it's effectiveness on a low powered system and provides considerations on the level of security it provides.
+This report aims to explain how to build a sensor platform that can transmit data across the internet securely and shows that security on low powered microcontrollers is possible and easy. It introduces a light weight cryptographic library and demonstrates it's effectiveness on a low powered system and provides considerations on the level of security it provides.
 
 \end{abstract}
 
@@ -429,7 +429,7 @@ Over the course of this project I was helped on more than one occasion. I would 
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-%\include{Appendices/AppendixA}
+\include{Appendices/AppendixA}
 %\include{Appendices/AppendixB}
 %\include{Appendices/AppendixC}
 
