working through it, working through it

--- a/example.bib
+++ b/example.bib
@@ -199,7 +199,13 @@ PKCS\#7, MOSS, PEM, PGP, and XML },
  	title = {PortaPow Premium USB + DC Power Monitor},
  	url = {http://www.portablepowersupplies.co.uk/portapow-premium-usb-dc-power-monitor/},
  }
-   
+ 
+@misc{kernel,
+	website={cvedetails.com},
+	author={MITRE },
+	title={Security Vulnerabilities},
+	url={https://www.cvedetails.com/vulnerability-list/vendor_id-33/product_id-47/cvssscoremin-7/cvssscoremax-7.99/Linux-Linux-Kernel.html},
+}   
 @misc{dsimage,
  	url = {http://fluuux.de/2012/09/arduino-adressen-aller-ds1820-ermitteln/}
  	}
