good lord don't fail me now

--- a/example.bib
+++ b/example.bib
@@ -200,6 +200,13 @@ PKCS\#7, MOSS, PEM, PGP, and XML },
  	url = {http://www.portablepowersupplies.co.uk/portapow-premium-usb-dc-power-monitor/},
  }
  
+ @misc{onewire},
+ 	website={playground.arduino.cc},
+ 	author={Paul Stoffregen},
+ 	title={Dallas Semiconductor's 1-Wire Protocol},
+ 	url={http://playground.arduino.cc/Learning/OneWire}
+ 	}
+
 @misc{kernel,
 	website={cvedetails.com},
 	author={MITRE },
@@ -217,5 +224,11 @@ PKCS\#7, MOSS, PEM, PGP, and XML },
  	@misc{ethimage,
  	url = {https://www.arduino.cc/en/Main/ArduinoEthernetShield}
  	}
+ 	@misc{byte2,
+ 	url={http://stackoverflow.com/questions/8890174/in-java-how-do-i-convert-a-hex-string-to-a-byte}
+ 	}
+ 	
+ 	@misc{String2,
+ 	url={http://stackoverflow.com/questions/3408706/hexadecimal-string-to-byte-array-in-c}}
  	
  
