--- a/main.tex
+++ b/main.tex
@@ -232,16 +232,12 @@ headsepline, % Uncomment to get a line under the header
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\vspace{50cm}
 \begin{titlepage}
-\vspace{50cm}
 \begin{center}
 
 %\textsc{\LARGE \univname}\\[1.5cm] % University name
 %\textsc{\Large Technical Report}\\[0.5cm] % Thesis type
 
-
-\bigskip
 
 \begin{minipage}{1\textwidth}
 \vspace{2.5cm}
@@ -280,7 +276,7 @@ headsepline, % Uncomment to get a line under the header
 %\textit{in the}\\[0.4cm]
 %\deptname\\[1cm] % Research group name and department name
 
-
+\smallskip
 
  {\large \today}\\[1cm] % Date
  \bigskip
@@ -341,7 +337,7 @@ headsepline, % Uncomment to get a line under the header
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-This report aims to explain how to build a sensor platform that can transmit data across the internet securely and shows that security on low powered microcontrollers is possible and easy. It introduces a light weight cryptographic library and demonstrates it's effectiveness on a low powered system and provides considerations on the level of security it provides.
+This report aims to explain how to build a sensor platform that can transmit data securely across an unsecure network and to show that security on low powered microcontrollers is possible and easy. It introduces a light weight cryptographic library and demonstrates it's effectiveness on a low powered system and provides considerations on the level of security it provides.
 
 \end{abstract}
 
@@ -352,7 +348,7 @@ This report aims to explain how to build a sensor platform that can transmit dat
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 
-Over the course of this project I was helped on more than one occasion. I would like to give thanks to my project supervisor, Dr. James Irvine and Grieg Paul, a PhD student who help was very useful throughout.
+Over the course of this project I was helped on more than one occasion. I would like to give thanks to my project supervisor, Dr. James Irvine and Grieg Paul, a PhD student who's help was very useful throughout.
 
 \end{acknowledgements}
 
