started adding appendix code

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -8,51 +8,26 @@
 
 \subsection{Java Server Pages}
 
-\subsubsection{DecryptTemp}
+\subsubsection{DecryptTemp.java}
 
-\begin{figure}[H]
-\begin{lstlisting}[style=Java]
+\lstinputlisting[language=Java]{Code/DecryptTemp.java}
 
-\end{lstlisting}
-\caption{Accessing the SQL database in JSP}
-\label{snip:jspcode}
-\end{figure}
+\subsubsection{SecretKey.java}
 
-
-\subsubsection{SecretKey}
-
-\begin{figure}[H]
-\begin{lstlisting}[style=Java]
-
-\end{lstlisting}
-\caption{Accessing the SQL database in JSP}
-\label{snip:jspcode}
-\end{figure}
-
+\lstinputlisting[language=Java]{Code/SecretKey.java}
 
 \subsection{PHP}
 
 \subsubsection{connect.php}
 
-\begin{figure}[H]
-%\begin{lstlisting}[language=PHP]
-\begin{lstlisting}[style=PHP]
+\lstinputlisting[language=PHP]{Code/connect.php}
 
-\end{lstlisting}
-\caption{Arduino to SQL interfacing code}
-\label{snip:php}
-\end{figure}
 
 \subsubsection{add.php}
 
-\begin{figure}[H]
-%\begin{lstlisting}[language=PHP]
-\begin{lstlisting}[style=PHP]
+\lstinputlisting[language=PHP]{Code/add.php}
 
-\end{lstlisting}
-\caption{Arduino to SQL interfacing code}
-\label{snip:php}
-\end{figure}
+
 \section{Microcontroller}
 
 \subsection{Arduino Due}
