code added, formating changed...can i kill 89 pages worth of tree

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -32,21 +32,8 @@
 
 \subsection{Arduino Due}
 
-\begin{figure}[H]
-\begin{lstlisting}[style=Arduino]
-
-\end{lstlisting}
-\caption{Handling POST requests in Arduino}
-\label{snip:post}
-\end{figure}
-
+\lstinputlisting[style=Arduino]{Code/completacodigo/completacodigo.ino}
 
 \subsection{Arduino Uno}
 
-\begin{figure}[H]
-\begin{lstlisting}[style=Arduino]
-
-\end{lstlisting}
-\caption{Handling POST requests in Arduino}
-\label{snip:post}
-\end{figure}
+\lstinputlisting[style=Arduino]{Code/WebServerPublicKey/WebServerPublicKey.ino}
