--- a/example.bib
+++ b/example.bib
@@ -231,4 +231,10 @@ PKCS\#7, MOSS, PEM, PGP, and XML },
  	@misc{String2,
  	url={http://stackoverflow.com/questions/3408706/hexadecimal-string-to-byte-array-in-c}}
  	
+ @misc{tweetdl,
+ url={http://tweetnacl.cr.yp.to/software.html}
+ }
+ @misc{blah,
+ url={http://stackoverflow.com/questions/9655181/how-to-convert-a-byte-array-to-a-hex-string-in-java}
+ }
  
